  "... -S snort.conf -S foo.conf ...".
o Handle multi-line variable definitions when merging variables.
o Obfuscate the oinkcode when printing URLs, unless running in verbose
  mode.
o Added ability to grab rules files from a local directory by 
  specifying dir://<directory> as URL.
o Suppress warnings about using modifysid on non-existent SIDs when 
  running in quiet mode.
o Added Q33 to the FAQ on how to disable all rules by default and
  only activate specific ones, with example how to automatically
  update only a few selected rules from Bleeding Snort.
o Other documentation updates.
o Misc improvements to the config file parser.
o You can now set the HTTP User-Agent header string for Oinkmaster by
  specifying "user_agent = ..." in oinkmaster.conf. The default
  User-Agent string is unchanged, i.e. the string that LWP or wget set
  it to by default. Based on patch from Derek Edwards.
o Make contrib/addmsg.pl handle some multi-line statements.
o contrib/create-sidmap.pl:
  - don't ignore rules that are commented out
  - ignore the file deleted.rules by default (you don't use it, do you?!)



Oinkmaster v1.2 - 20050417
~~~~~~~~~~~~~~~~~~~~~~~~~~
o Slightly improved modifysid/template documentation and examples.
  For example, added a new template to disable a SID but only if it has 
  a specific revision number so you can disable a rule temporarily and 
  automatically start using it again if it becomes updated. Thanks to 
  Russell Fulton for this suggestion.
o Suppress warnings about non-matching modifysid expressions when
  running in super quiet mode (-Q).
o Permit .tgz suffix for rules archive.
o Permit filename as argument to modifysid (and use_template) to apply
  a substitution expression on all rules in the specified files(s).
o You can now download multiple rules archives from different URLs at
  the same time, either by specifying several -u <url> on the command
  line or by using several url=<url> directives in the Oinkmaster